Bug 1720493 - Fix handling of font.single-face-list in the macOS font list. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D119953